--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -28,6 +28,7 @@ body {
   line-height: 24px;
   letter-spacing: 0px; 
   overflow-x: hidden;
+  background-color: $neutral-200;
 }
 
 .bodyb2 {
